<resources>

    <string name="app_name">Weather app ktx</string>

    <!--Описание контента (для инвалидов)-->
    <string name="background_image">background image</string>

    <!--Передаваемые во View-->
    <string name="humidity_view">%</string>
    <string name="wind_view"> m/s</string>
    <string name="pressure_view">mBar</string>
    <string name="max_temp_view">max: </string>
    <string name="min_temp_view">min: </string>
    <string name="temp_view">˚</string>

    <!--Статик-->
    <string name="wind">Wind</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="daytime">Daytime</string>
    <string name="pressure">pressure</string>
    <string name="humidity">Humidity</string>

    <!--Дефолтные значение-->
    <string name="default_percent">100%</string>
    <string name="default_temp">33˚</string>
    <string name="default_daytime">13h 1m</string>
    <string name="default_sunset">7:05 PM</string>
    <string name="default_time">Sunday, 19 May 2019 | 4:30</string>
    <string name="default_sunrise">6:03 AM</string>
    <string name="default_mbar">1,007mBar</string>
    <string name="default_wind">23 m/s</string>
    <string name="default_weather_cond">Drizzle</string>
    <string name="default_min_temp">min: 20˚</string>
    <string name="default_max_temp">max: 30˚</string>


    <string name="geo_error">Вы запретили доступ к геолокации, повторить попытку?</string>
</resources>