<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.lffq.ktweatherapp.ui.MainViewModel"/>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">


        <ImageView
            android:id="@+id/Background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/background_image"
            android:scaleType="fitXY"
            android:src="@drawable/img_day" />

        <RelativeLayout
            android:id="@+id/huprewind"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/Background"
            android:background="@drawable/shp_background"
            android:layout_marginTop="-30dp"
            android:elevation="100dp">

            <RelativeLayout
                android:id="@+id/top_layout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_above="@+id/center_layout"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="-90dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="120dp"
                    android:layout_marginEnd="120dp"
                    android:paddingStart="10dp"
                    android:text="@string/default_temp"
                    android:textColor="@color/colorTextPrimaryLightTheme"
                    android:textAlignment="center"
                    android:fontFamily="@font/barlow_regular"
                    android:textSize="50sp" />

                <!-- <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_weather_cond"/> -->
            </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/center_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/bottom_layout"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="-265dp">

                    <ImageView
                        android:id="@+id/pressure_img"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/wi_barometer"
                        app:tint="@color/colorTextAccentLightTheme">

                    </ImageView>
                    <TextView
                        android:id="@+id/pressure_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pressure_img"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/barlow_medium"
                        android:text="@string/default_mbar"
                        android:textColor="@color/colorTextPrimaryLightTheme"
                        android:textSize="20sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pressure_input"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="-5dp"
                        android:fontFamily="@font/barlow_medium"
                        android:text="@string/pressure"
                        android:textColor="@color/colorTextAccentLightTheme"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/humidity_img"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/wi_humidity"
                        app:tint="@color/colorTextAccentLightTheme" />
                    <TextView
                        android:id="@+id/humidity_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/humidity_img"
                        android:layout_alignStart="@+id/humidity_img"
                        android:layout_alignEnd="@+id/humidity_img"
                        android:layout_marginStart="1dp"
                        android:layout_marginEnd="1dp"
                        android:fontFamily="@font/barlow_medium"
                        android:text="@string/default_percent"
                        android:textAlignment="center"
                        android:textColor="@color/colorTextPrimaryLightTheme"
                        android:textSize="20sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/humidity_input"
                        android:layout_alignStart="@+id/humidity_input"
                        android:layout_alignEnd="@+id/humidity_input"
                        android:layout_marginTop="-5dp"
                        android:fontFamily="@font/barlow_medium"
                        android:text="@string/humidity"
                        android:textAlignment="center"
                        android:textColor="@color/colorTextAccentLightTheme"
                        android:textSize="14sp" />
                    <ImageView
                        android:id="@+id/wind_img"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/wi_strong_wind"
                        app:tint="@color/colorTextAccentLightTheme" />
                    <TextView
                        android:id="@+id/wind_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/wind_img"
                        android:layout_alignStart="@id/wind_img"
                        android:layout_alignEnd="@id/wind_img"
                        android:layout_marginStart="-10dp"
                        android:layout_marginEnd="-10dp"
                        android:fontFamily="@font/barlow_medium"
                        android:text="@string/default_wind"
                        android:textAlignment="center"
                        android:textColor="@color/colorTextPrimaryLightTheme"
                        android:textSize="20sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/wind_input"
                        android:layout_alignStart="@id/wind_input"
                        android:layout_alignEnd="@id/wind_input"
                        android:layout_marginTop="-5dp"
                        android:fontFamily="@font/barlow_medium"
                        android:text="@string/wind"
                        android:textAlignment="center"
                        android:textColor="@color/colorTextAccentLightTheme"
                        android:textSize="14sp" />
                </RelativeLayout>

            <RelativeLayout
                android:id="@+id/bottom_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="276dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/daytime_img"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/wi_time"
                    app:tint="@color/colorTextAccentLightTheme">

                </ImageView>

                <TextView
                    android:id="@+id/dautime_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/daytime_img"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/barlow_medium"
                    android:text="@string/default_daytime"
                    android:textColor="@color/colorTextPrimaryLightTheme"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/dautime_input"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-5dp"
                    android:layout_marginBottom="-1dp"
                    android:fontFamily="@font/barlow_medium"
                    android:text="@string/daytime"/>


                <ImageView
                    android:id="@+id/sunrise_img"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/wi_sunrise"
                    app:tint="@color/colorTextAccentLightTheme" />

                <TextView
                    android:id="@+id/sunrise_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sunrise_img"
                    android:layout_alignStart="@id/sunrise_img"
                    android:layout_alignEnd="@id/sunrise_img"
                    android:layout_marginStart="-6dp"
                    android:layout_marginEnd="-6dp"
                    android:fontFamily="@font/barlow_medium"
                    android:text="@string/default_sunrise"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextPrimaryLightTheme"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sunrise_input"
                    android:layout_alignStart="@id/sunrise_input"
                    android:layout_alignEnd="@id/sunrise_input"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="-5dp"
                    android:layout_marginBottom="-1dp"
                    android:fontFamily="@font/barlow_medium"
                    android:text="@string/sunrise"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextAccentLightTheme"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/sunset_img"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/wi_sunset"
                    app:tint="@color/colorTextAccentLightTheme" />

                <TextView
                    android:id="@+id/sunset_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sunset_img"
                    android:layout_alignStart="@id/sunset_img"
                    android:layout_alignEnd="@id/sunset_img"
                    android:layout_marginStart="-6dp"
                    android:layout_marginEnd="-6dp"
                    android:fontFamily="@font/barlow_medium"
                    android:text="@string/default_sunset"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextPrimaryLightTheme"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sunset_input"
                    android:layout_alignStart="@id/sunset_input"
                    android:layout_alignEnd="@id/sunset_input"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="-5dp"
                    android:layout_marginBottom="-1dp"
                    android:fontFamily="@font/barlow_medium"
                    android:text="@string/sunset"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextAccentLightTheme"
                    android:textSize="14sp" />

            </RelativeLayout>

        </RelativeLayout>


    </RelativeLayout>
</layout>